# IceSDK

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  default.nix
.github/: FUNDING.yml  restyled.yml
.github/workflows/: pc_linux.yml  pc_windows.yml
Examples/BareBones/: main.cc
IceSDK/: BUILD.gn  CMakeLists.txt  GameBase.cc  GameBase.h  IceSDK.gni  main.cc  pch.h  platform.h
IceSDK/Components/: Platform.h
IceSDK/Components/Core/: CMakeLists.txt  README.md  pch.hh
IceSDK/Components/Core/ECS/: Entity.cc  Entity.hh  Scene.cc  Scene.hh  System.cc  System.hh  _Entity.h
IceSDK/Components/Core/ECS/Systems/: CameraSystem.cc
IceSDK/Components/Core/Graphics/: Texture2D.cc  Texture2D.hh  Window.cc  Window.hh  _Window.cc
IceSDK/Components/Core/Utils/: FileSystem.cc  FileSystem.hh  Logger.cc  Logger.hh
IceSDK/Components/ScriptBindings/: CMakeLists.txt  Lib.cc  Lib.hh  Natives.h  README.md
IceSDK/Components/ScriptBindings/Bindings/: Logging.hh
IceSDK/Components/Scripting/: CMakeLists.txt  Core.cc  Core.hh  Native.c  Native.h  README.md  pch.h
IceSDK/ECS/: Entity.cc  Entity.h  EntityExtension.cc  Scene.cc  Scene.h
IceSDK/ECS/Components/: CameraComponent.h
IceSDK/ECS/Systems/: CameraSystem.cc  TransformSystem.cc
IceSDK/Graphics/: Window.cc  Window.h
IceSDK/Graphics/Debug/: Draw.h
IceSDK/Graphics/Fonts/: FontFace.cc  FontManager.cc
IceSDK/Graphics/ImGui/Widgets/: Properties.cc  Properties.h  SceneGraph.h
IceSDK/Graphics/ImGui/Widgets/Helpers/: Vec.h
IceSDK/Graphics/ImGui/Widgets/Helpers/Components/: Camera.h  Transform.h
IceSDK/Graphics/SpriteBatch/: SpriteBatch.cc
IceSDK/Graphics/Systems/: SpriteRenderingSystem.cc  SpriteRenderingSystem.h  TextRenderingSystem.cc
IceSDK/IceFS/: Entry.h  FileSystem.cc  FileSystem.h
IceSDK/Input/: InputPipeline.cc  InputPipeline.h
IceSDK/Input/Systems/: KeyboardInputSystem.cc  MouseInputSystem.cc
IceSDK/Physics/Components/: BoxCollider.h  PhysicsComponent.h  Rigidbody2D.h
IceSDK/Physics/Systems/: PhysicSystem.cc  PhysicSystem.h
IceSDK/Utils/: Buffer.h  FileSystem.cc  Instrumentor.h  String.h
IceSDK/include/IceSDK/: Entity.hh  GameBase.hh  Platform.hh  Scene.hh  System.hh
IceSDK/include/IceSDK/Assets/: Asset.hh  AssetFile.hh  AssetHeader.hh  AssetManager.hh  AudioAsset.hh  ShaderAsset.hh  TextAsset.hh  Texture2DAsset.hh
IceSDK/include/IceSDK/Audio/: AudioEngine.hh  AudioEnums.hh  Sound.hh
IceSDK/include/IceSDK/Components/: BaseComponent.hh  CameraComponent.hh  KeyboardInputComponent.hh  MeshComponent.hh  MouseInputComponent.hh  ShaderComponent.hh  SpriteComponent.hh  TextComponent.hh  TransformComponent.hh
IceSDK/include/IceSDK/Graphics/: FontFace.hh  FontManager.hh  SpriteBatch.hh  Texture2D.hh  Window.hh
IceSDK/include/IceSDK/Graphics/Debug/: Draw.hh
IceSDK/include/IceSDK/Graphics/ImGui/: bgfx_imgui.hh  bgfx_utils.hh
IceSDK/include/IceSDK/Graphics/ImGui/Widgets/: AssetBrowser.hh  SceneGraph.hh
IceSDK/include/IceSDK/Graphics/Shaders/: ShaderManager.hh
IceSDK/include/IceSDK/Input/: ButtonState.hh  InputPipeline.hh  KeyboardMods.hh  KeyboardTable.hh  MouseTable.hh
IceSDK/include/IceSDK/Systems/: CameraSystem.hh  KeyboardInputSystem.hh  MouseInputSystem.hh  SpriteRenderingSystem.hh  TextRenderingSystem.hh  TransformSystem.hh
IceSDK/include/IceSDK/Utils/: Buffer.hh  Exception.hh  FileSystem.hh  Logger.hh  Math.hh  String.hh
IceSDK/src/: Entity.cc  GameBase.cc  Scene.cc  pch.hh
IceSDK/src/Assets/: AssetFile.cc  AssetManager.cc  Texture2DAsset.cc
IceSDK/src/Audio/: AudioEngine.cc
IceSDK/src/Graphics/: FontFace.cc  Texture2D.cc  Window.cc
IceSDK/src/Input/: InputPipeline.cc
IceSDK/src/Systems/: CameraSystem.cc  KeyboardInputSystem.cc  MouseInputSystem.cc  SpriteRenderingSystem.cc  TextRenderingSystem.cc
Tests/: CMakeLists.txt  Test.cc
Tests/IceSDK/Utils/: String.cc
examples/: CMakeLists.txt
examples/BareBones/: CMakeLists.txt  Entry.c  main.cc
tools/: LICENSE.md  compile_assets.py
tools/linux/: AssetCompiler
tools/sources/AssetCompiler/: CMakeLists.txt
